# swara

./: .envrc  .gitignore  cabal.project  default.nix  hie.yaml  openapi.json
client/: package-lock.json  package.json
client/src/: App.tsx
client/src/hooks/: useAPI.tsx  useSound.tsx
client/src/services/openapi/core/: OpenAPI.ts  request.ts
client/src/services/openapi/services/: Service.ts
server/: server.cabal
server/src/: Main.hs
server/src/Database/: Schema.hs
