cabal-version: 2.2
name:          server
version:       0.1.0
build-type:    Simple

executable server
  hs-source-dirs:     src
  main-is:            Main.hs
  default-language:   Haskell2010
  default-extensions: NoImplicitPrelude
  build-depends:
    , base
    , rio
    , servant
    , servant-server
    , squeal-postgresql
    , warp
